# minecraft-clone

./: .gitignore  CMakeLists.txt
assets/shaders/: test.frag  test.vert
assets/textures/: texture_atlas.xcf
include/: block.h  camera.h  chunk.h  game.h  shader.h  texture.h  vertex.h  window.h  world.h
include/math/: matrix4f.h  noise.h  vector2f.h  vector3f.h
src/: block.c  camera.c  chunk.c  game.c  main.c  shader.c  texture.c  window.c  world.c
src/math/: matrix4f.c  noise.c  vector3f.c
